--- a/index.html
+++ b/index.html
@@ -6,37 +6,53 @@
     <title>Recipe</title>
 </head>
 <body>
-    <h1>my favorite food</h1>
-<hr></hr>
-
-<h2>list of the food<h2>
+    <nav>
+        <a href="#">Meals</a>
+        <a href="#">About Me</a>
+        <a href="#">Contact Us</a>
+    </nav>
+    <header>
+        <h1>Beauty's Recipe Book</h1>
+        <h2>My Favourite Food: Beans & Plantain<h2>
+    </header>
+ 
   
-<ul>
-  <li>fried plantain</li>
-  <li>porridge beans </li>
-  </ul>
- <h3>list of items needed for porridge beans</h3>
+<section>
+    <ul>
+        <li>fried plantain</li>
+        <li>porridge beans </li>
+      </ul>
+       <h3>list of items needed for porridge beans</h3>
+        <hr></hr>
+      <ul>
+          <li>oil</li>
+          <li>pepper</li>
+          <li>maggi</li>
+          <li>salt</li>
+          <li>crayfish</li>
+          <li>water😁</li>
+      </ul>
+      
+</section>
   <hr></hr>
-  
-  <ul>
-    <li>oil</li>
-    <li>pepper</li>
-    <li>maggi</li>
-    <li>salt</li>
-    <li>crayfish</li>
-    <li>water😁</li>
-</ul>
-  <hr></hr>
+<section>
 
   <h3>how to prepare the meal</h3>
-  <hr></hr>
+
 
   <h4>per boil the beans, aferwards start cooking the beans until it becomes soft then add red oil, pepper, Maggie, crayfish and salt. The beans is done </h4>
 
-<hr></hr>
+
 <h5> how to fry plantains</h5>
-<hr><hr>
+
 
 <h6> cut the plantain, heat your groundnut oil and the put the plaintain into it till it is done </h6>
+
+</section>
+<footer>
+    <a href="#">Facebook</a>
+    <a href="#">Twitter</a>
+    <a href="#">Instagram</a>
+</footer>
 </body>
 </html>
