--- a/index.html
+++ b/index.html
@@ -3,17 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Recipe</title>
 </head>
 <body>
     <nav>
+        <p>
+            BR
+        </p>
+       <div>
         <a href="#">Meals</a>
         <a href="#">About Me</a>
         <a href="#">Contact Us</a>
+       </div>
+
     </nav>
     <header>
-        <h1>Beauty's Recipe Book</h1>
-        <h2>My Favourite Food: Beans & Plantain<h2>
+        <div>
+            <h1>Beauty's Recipe Book</h1>
+            <h2>My Favourite Food: Beans & Plantain<h2>
+        </div>
+        <div>
+            <img src="" alt="food">
+        </div>
     </header>
  
   
